--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
               <div class="portfolio-info">
                 <h4>Speakers</h4>
                 <p>Amplifiers, Active , and Passive speakers</p>
-                <a href="/images/speakers.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="images/speakers.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
