--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="/board/IconD.png" rel="icon">
-  <link href="/board/IconD.png" rel="apple-touch-icon">
+  <link href="board/IconD.png" rel="icon">
+  <link href="board/IconD.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -218,7 +218,7 @@
     <!-- Stats Section -->
     <section id="stats" class="stats section dark-background">
 
-      <img src="/images/Gmap.PNG" alt="" data-aos="fade-in">
+      <img src="images/Gmap.PNG" alt="" data-aos="fade-in">
 
       <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
 
@@ -436,7 +436,7 @@
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item">
-              <img src="/images/desktop.png" class="img-fluid" alt="">
+              <img src="images/desktop.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Desktop Computers</h4>
                 <p>Desktop Computers Setup</p>
@@ -446,7 +446,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="/images/speechlab.jpg" class="img-fluid" alt="">
+              <img src="images/speechlab.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Digital Speech Laboratory System</h4>
                 <p>Liceo de Cagayan University</p>
@@ -456,7 +456,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="/images/turnstylebuksu.jpg" class="img-fluid" alt="">
+              <img src="images/turnstylebuksu.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Turnstyle Entrance System</h4>
                 <p>School gate entrance</p>
@@ -466,17 +466,17 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app ">
-              <img src="/images/speechlab3.jpg" class="img-fluid" alt="">
+              <img src="images/speechlab3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Hybrid Digital Analog Speechlab</h4>
                 <p>Speech laboratory</p>
-                <a href="/images/speechlab3.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="images/speechlab3.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="/images/door-frame-metal-detector.png" class="img-fluid" alt="">
+              <img src="images/door-frame-metal-detector.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Door Frame Metal Detector</h4>
                 <p>Detects metals for security</p>
@@ -486,7 +486,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="/images/speakers.jpg" class="img-fluid" alt="">
+              <img src="images/speakers.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Speakers</h4>
                 <p>Amplifiers, Active , and Passive speakers</p>
@@ -496,31 +496,31 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item">
-              <img src="/images/public-address-systems.jpg" class="img-fluid" alt="">
+              <img src="images/public-address-systems.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Public Address Systems</h4>
                 <p>Audio Broadcasting</p>
-                <a href="/images/public-address-systems.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="images/public-address-systems.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="/images/turn-style1.jpg" class="img-fluid" alt="">
+              <img src="images/turn-style1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Turnstyle</h4>
                 <p>School Gate Entrance Turnstyle</p>
-                <a href="/images/turn-style1.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="images/turn-style1.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="/images/printers.jpg" class="img-fluid" alt="">
+              <img src="images/printers.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Printers</h4>
                 <p>Epson Printers</p>
-                <a href="/images/printers.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="images/printers.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
              </div><!-- End Portfolio Item -->
