--- a/services-details.html
+++ b/services-details.html
@@ -47,7 +47,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-         <img src="/images/datalogix.png" alt=""> 
+         <img src="images/datalogix.png" alt=""> 
         <h1 class="sitename">Datalogix Solutions Corporation</h1><span></span>
       </a>
 
@@ -186,7 +186,7 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename"><img src="/images/datalogix.png" alt=""></span>
+            <span class="sitename"><img src="images/datalogix.png" alt=""></span>
           </a>
           <p style="font-weight: bold;">Ready to Unlock the Full Potential of Your Website?</p>
           <p>Let's embark on a journey to create a digital masterpiece that leaves a lasting impression. 
