--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="400">
             <div class="member-img">
-              <img src="/board/gerald.png" class="img-fluid" alt="">
+              <img src="board/gerald.png" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
