--- a/services-details.html
+++ b/services-details.html
@@ -146,7 +146,7 @@
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="/images/Web-Designing.jpg" alt="" class="img-fluid services-img">
+            <img src="images/Web-Designing.jpg" alt="" class="img-fluid services-img">
             <h3>Unlock the Power of Exceptional Web Design</h3>
             <p>
               Experience the Art of Crafting Unforgettable Digital Experiences. At Datalogix Solutions Corporation, we're driven by an unwavering 
