--- a/services-details.html
+++ b/services-details.html
@@ -53,27 +53,27 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html#hero">Home</a></li>
+          <li><a href="index.html#hero" class="active">Home</a></li>
           <li><a href="index.html#about">About</a></li>
           <li><a href="index.html#services">Services</a></li>
           <li><a href="index.html#portfolio">Portfolio</a></li>
           <li><a href="index.html#team">Team</a></li>
           <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-             <ul>
+            <ul>
               <li><a href="gallery.html">Speechlab Gallery</a></li>
-            <!--  <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <!--<li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>-->
                 <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
+                  <!--<li><a href="#">Deep Dropdown 1</a></li>
                   <li><a href="#">Deep Dropdown 2</a></li>
                   <li><a href="#">Deep Dropdown 3</a></li>
                   <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
+                  <li><a href="#">Deep Dropdown 5</a></li>-->
                 </ul>
               </li>
-              <li><a href="#">Dropdown 2</a></li>
+             <!-- <li><a href="#">Dropdown 2</a></li>
               <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul> -->
+              <li><a href="#">Dropdown 4</a></li>-->
+            </ul> 
           </li>
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
