--- a/services-details.html
+++ b/services-details.html
@@ -220,7 +220,7 @@
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
-          <p>Tiano Kalambaguhan</p>
+          <p>R202-203 P&J Lim Bldg. Tiano Kalambaguhan</p>
           <p>Cagayan de Oro City</p>
           <p>Philippines</p>
           <p class="mt-4"><strong>Phone:</strong> <span>(+63) 920-956-0588</span></p>
