--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
   <!--End of Tawk.to Script-->
 
 <body class="index-page">
-
+  
+ <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0&appId=2344856865870262"></script>
+  
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
@@ -369,19 +372,12 @@
             </p>
             <a href="https://www.facebook.com/datalogix123" class="btn btn-get-started">Visit us on our facebook page.</a>
           </div>
-          <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
-            
-      <iframe 
-              src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fdatalogix123&tabs=timeline&width=600&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-               width="600" 
-                height="450" 
-                  style="border:none; overflow:hidden;" 
-                  scrolling="no" 
-                  frameborder="0" 
-                  allowfullscreen="true" 
-                  allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" 
-                  class="stack-front">
-      </iframe>
+         <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
+            <div class="fb-page" 
+                data-tabs="timeline,events,messages"
+                data-href="https://www.facebook.com/datalogix123"
+                data-width="500" 
+                data-hide-cover="false"></div>
           </div>
 
         </div><!-- Features Item -->
