--- a/services-details.html
+++ b/services-details.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="/board/IconD.png" rel="icon">
-  <link href="/board/IconD.png" rel="apple-touch-icon">
+  <link href="board/IconD.png" rel="icon">
+  <link href="board/IconD.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -41,7 +41,7 @@
   })();
   </script>
 
-  <script src="/assets/js/darkmode.js"></script>
+  <script src="assets/js/darkmode.js"></script>
  
   <!--End of Tawk.to Script-->
 <body class="services-details-page">
