--- a/services-details.html
+++ b/services-details.html
@@ -65,7 +65,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html#hero" class="active">Home</a></li>
+          <li><a href="index.html#hero">Home</a></li>
           <li><a href="index.html#about">About</a></li>
           <li><a href="index.html#services">Services</a></li>
           <li><a href="index.html#portfolio">Portfolio</a></li>
@@ -73,6 +73,9 @@
           <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="gallery.html">Speechlab Gallery</a></li>
+              <li><a><button id="theme-switch">Light Mode</button>
+              </a></li>
+              
               <!--<li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>-->
                 <ul>
                   <!--<li><a href="#">Deep Dropdown 1</a></li>
