--- a/services-details.html
+++ b/services-details.html
@@ -127,7 +127,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
 
             <div class="service-box">
-              <h4>Serices List</h4>
+              <h4>Services List</h4>
               <div class="services-list">
                 <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
                 <a><span>Product Management</span></a>
