--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/darkmodestylemain.css">
   
 </head>
 
@@ -66,6 +67,7 @@
           }
         });
       </script>
+      <script src="assets/js/darkmode.js"></script>
       
     <nav id="navmenu" class="navmenu">
         <ul>
@@ -77,6 +79,7 @@
           <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="gallery.html">Speechlab Gallery</a></li>
+              <li><a><button id="theme-switch">Light Mode</button>
               <!--<li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>-->
                 <ul>
                   <!--<li><a href="#">Deep Dropdown 1</a></li>
