--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   })();
   </script>
   <!--End of Tawk.to Script-->
+  <script src="assets/js/darkmode.js"></script>
 
 <body class="index-page">
   
@@ -67,7 +68,6 @@
           }
         });
       </script>
-      <script src="assets/js/darkmode.js"></script>
       
     <nav id="navmenu" class="navmenu">
         <ul>
@@ -80,6 +80,7 @@
             <ul>
               <li><a href="gallery.html">Speechlab Gallery</a></li>
               <li><a><button id="theme-switch">Light Mode</button>
+              </a></li>
               <!--<li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>-->
                 <ul>
                   <!--<li><a href="#">Deep Dropdown 1</a></li>
@@ -547,7 +548,7 @@
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="100">
             <div class="member-img">
-              <img src="board/joel-removebg-preview.png" class="img-fluid" alt="">
+              <img src="board/joel.jpg" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
@@ -564,7 +565,7 @@
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="200">
             <div class="member-img">
-              <img src="board/noel-removebg-preview.png" class="img-fluid" alt="">
+              <img src="board/noel.jpg" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
@@ -598,7 +599,7 @@
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="400">
             <div class="member-img">
-              <img src="board/gerald.png" class="img-fluid" alt="">
+              <img src="board/gerald_white_bg.png" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-twitter-x"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
