--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
             </div>
             <div class="member-info text-center">
               <h4>Emmanuel A. Reonal</h4>
-              <span>President and CEOEVP/Chief Finance Officer</span>
+              <span>EVP/Chief Finance Officer</span>
               <p></p>
             </div>
           </div><!-- End Team Member -->
