--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
               <div>
                 <h4 class="title"><a href="services-details.html" class="stretched-link">Point of Sale System</a></h4>
-                <p class="description">A complete point of sale (POS) system for managing sales of retail goods for grocery, convenience store, department store, restaurant,
+                <p style="text-align: justify;"  class="description">A complete point of sale (POS) system for managing sales of retail goods for grocery, convenience store, department store, restaurant,
                    fast food and other sales oriented business.</p>
               </div>
             </div>
@@ -320,7 +320,7 @@
               <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
               <div>
                 <h4 class="title"><a href="services-details.html" class="stretched-link">Timekeeping System</a></h4>
-                <p class="description">Facilitates the completion and approval of employee time sheets. Our system will standardize department timekeeping
+                <p style="text-align: justify;"  class="description">Facilitates the completion and approval of employee time sheets. Our system will standardize department timekeeping
                    processes and will be used by all employees who earn vacation and/or sick leave, overtime or shift differentials. The package includes
                     a biometric Finger Print Recognition Device.</p>
               </div>
@@ -332,7 +332,7 @@
               <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
               <div>
                 <h4 class="title"><a href="services-details.html" class="stretched-link">Personnel Information System</a></h4>
-                <p class="description">Allows an individual to gather, organize, store and retrieve the ideas and information found to be useful to the individual.
+                <p style="text-align: justify;"  class="description">Allows an individual to gather, organize, store and retrieve the ideas and information found to be useful to the individual.
                    It has been designed for the purpose of storing and maintaining records of all the employees of the organization. Our system improves the performance
                     of most personnel functions, including personnel recruitment, selection and development, as well as administrative services.</p>
               </div>
@@ -344,7 +344,7 @@
               <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
               <div>
                 <h4 class="title"><a href="services-details.html" class="stretched-link">Accounting Information System</a></h4>
-                <p class="description">A comprehensive and integrated accounting system that allows efficient data management and on-time reports
+                <p style="text-align: justify;" class="description">A comprehensive and integrated accounting system that allows efficient data management and on-time reports
                    delivery for effective decision making. This system is composed of purchase requests, purchase orders, inventory management, 
                    asset management, sales, receipts, cash disbursement, cash deposit, journal voucher, cash management, accounts receivable, accounts payable,
                     bank reconciliation and general ledger system. This is the core of the entire software package we developed. All of our software can fully integrate in this system.</p>
