--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="col-xl-5 content">
             <h3>Company Profile</h3>
             <h2>Datalogix Solutions Corporation</h2>
-            <p>Datalogix Solutions Corporation was established in 2018 by the highly competent business professionals who have proven track records in their
+            <p style="text-align: justify;">Datalogix Solutions Corporation was established in 2018 by the highly competent business professionals who have proven track records in their
               respective area of expertise and have acquired skilled talents and personnel who are technically equipped with varied experience and technical trainings
               to help deliver the current and emerging trends in ICT system and solutions with cost effective and cost efficient usage of these technology for the delight of clients.</p>
             
@@ -296,7 +296,7 @@
               <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
               <div>
                 <h4 class="title"><a href="services-details.html" class="stretched-link">Hotel Information System</a></h4>
-                <p class="description">Provides an easy to use reservation, registration and billing system for hotel operations. 
+                <p style="text-align: justify;" class="description">Provides an easy to use reservation, registration and billing system for hotel operations. 
                   We have combined our years of hospitality experience with IT expertise to develop an enterprise-class system that brings our clients 
                   a foundation for sustainable competitive advantages.</p>
               </div>
@@ -308,7 +308,7 @@
               <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
               <div>
                 <h4 class="title"><a href="services-details.html" class="stretched-link">Payroll System</a></h4>
-                <p class="description">Creates a positive impact in the empowerment and efficiency of any organization. Our system automates payroll
+                <p style="text-align: justify;" class="description">Creates a positive impact in the empowerment and efficiency of any organization. Our system automates payroll
                    computation while making recording and retrieval of employee records fast and easy. It has unlimited options for income and deduction 
                    making it very open for future requirements.</p>
               </div>
